[gd_scene load_steps=12 format=3 uid="uid://d03ttnf36pyb8"]

[ext_resource type="Texture2D" uid="uid://dd4syd65awg8g" path="res://icon.svg" id="1_h0mno"]
[ext_resource type="Script" path="res://util/seed_button.gd" id="1_iqlj3"]
[ext_resource type="Texture2D" uid="uid://cvegttcu3i8kc" path="res://util/lock.png" id="3_y8n4w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2m7tb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7f34q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3hb5h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f3p1k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4drwd"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ttkl2"]
texture_margin_left = 30.0
texture_margin_top = 30.0
texture_margin_right = 30.0
texture_margin_bottom = 30.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2nmsj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xfgjk"]

[node name="SeedButton" type="PanelContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(150, 150)
anchors_preset = -1
anchor_right = 0.117
anchor_bottom = 0.208
offset_right = -122.76
offset_bottom = -123.76
script = ExtResource("1_iqlj3")
plant_icon = ExtResource("1_h0mno")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Plant"

[node name="DurationLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Instant"

[node name="Button" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_2m7tb")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_7f34q")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_3hb5h")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_f3p1k")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_4drwd")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ttkl2")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_2nmsj")
theme_override_styles/normal = SubResource("StyleBoxEmpty_xfgjk")
icon = ExtResource("1_h0mno")
icon_alignment = 1
expand_icon = true

[node name="LockIcon" type="TextureRect" parent="VBoxContainer/Button"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.870588)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = 25.0
offset_right = -25.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_y8n4w")
expand_mode = 1

[connection signal="button_down" from="VBoxContainer/Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="VBoxContainer/Button" to="." method="_on_button_button_up"]
